--- a/ansible/roles/app/tasks/main.yml
+++ b/ansible/roles/app/tasks/main.yml
@@ -1,16 +1,19 @@
 - name: Checkout code
   git:
     repo: "https://github.com/shimaaaa/django-ansible.git"
-    dest: app.install_directory
+    dest: "{{ app.install_directory }}"
+
 - name: Add poetry
-  shell: /opt/pyenv/shims/pip install poetry
+  shell: ~/.pyenv/shims/pip install poetry
   args:
-    chdir: app.install_directory
+    chdir: "{{ app.install_directory }}"
+
 - name: Set poetry config
-  shell: /opt/pyenv/shims/poetry config virtualenvs.in-project true
+  shell: ~/.pyenv/shims/poetry config virtualenvs.in-project true
   args:
-    chdir: app.install_directory
+    chdir: "{{ app.install_directory }}"
+
 - name: Poetry install
-  shell: /opt/pyenv/shims/poetry install
+  shell: ~/.pyenv/shims/poetry install
   args:
-    chdir: app.install_directory
+    chdir: "{{ app.install_directory }}"
