--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -1,11 +1,13 @@
 ---
 - name: Update resolve.conf
+  become: yes
   template:
     force: yes
     src: resolve.conf.j2
     dest: /etc/resolve.conf
 
 - name: Install common packages
+  become: yes
   apt:
     name: "{{ packages }}"
     update_cache: yes
