--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Your Name <you@example.com>"]
 [tool.poetry.dependencies]
 python = "^3.6"
 django = "^3.0.2"
+uwsgi = "^2.0.18"
 
 [tool.poetry.dev-dependencies]
 
